# status-checker-lambda

./: Cargo.toml  test-payload.json
src/: main.rs
