[package]
name = "status-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["cloudwatch_events"] }
lambda_runtime = "0.8.1"
# The openssl crate is required to get reqwest working with cargo lambda.
# See: https://stackoverflow.com/questions/76231924/cargo-lambda-build-does-not-find-openssl-development-headers
openssl = { version = "0.10.55", features = ["vendored"] }
reqwest = "0.11.18"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

